refactoring existing code for this

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 
 <html>
     <body>
-        <script src="./script.js">
-            alert("open your console window");
-        </script>
+        <script src="./script.js"></script>
     </body>
 </html>
