--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <meta charset="UTF-8" lang="en">
+        <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    </head>
+
     <body>
         <script src="./script.js"></script>
     </body>
