--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     </head>
 
     <body>
+        <div class="container">
+            <div class="player-options">
+                <img src="TBD" alt="rock">
+                <img src="TBD" alt="paper">
+                <img src="TBD" alt="scissors">
+            </div>
+            <div class="scoreboard">
+                <div class="player-score">
+                    <h2>Player Score: </h2>
+                </div>
+                <div class="computer-score">
+                    <h2>Computer Score: </h2>
+                </div>
+            </div>
+        </div>
         <script src="./script.js"></script>
     </body>
 </html>
