--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8" lang="en">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/styles.css">
+        <title>Rock Paper Scissors - The Odin Project</title>
     </head>
 
     <body>
+        <h2>Rock, Paper, Scissors Game</h2>
         <div class="container">
             <div class="player-options">
-                <img src="TBD" alt="rock">
-                <img src="TBD" alt="paper">
-                <img src="TBD" alt="scissors">
+                <button onclick="play('rock')">Rock</button>
+                <button onclick="play('paper')">Paper</button>
+                <button onclick="play('scissors')">Scissors</button>
             </div>
             <div class="scoreboard">
                 <div class="player-score">
-                    <h2>Player Score: </h2>
+                    <p>Player Score: <span id="playerScore">0</span></p>
                 </div>
                 <div class="computer-score">
-                    <h2>Computer Score: </h2>
+                    <p>CPU Score: <span id="cpuScore">0</span></p>
                 </div>
             </div>
+
+            <div id="result"></div>
         </div>
         <script src="./script.js"></script>
     </body>
