--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +26,10 @@
                 </div>
             </div>
 
-            <div id="result"></div>
+            <div id="roundResult"></div>
+            <div id="gameResult"></div>
         </div>
         <script src="./script.js"></script>
     </body>
+
 </html>
