--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
             <div id="roundResult"></div>
             <div id="gameResult"></div>
+
+            <button id="restartButton" onclick="restartGame()" style="display: none;">Restart Game</button>
         </div>
         <script src="./script.js"></script>
     </body>
